@@ -2,13 +2,16 @@ package me.glicz.holograms;
 
 import dev.jorel.commandapi.CommandAPI;
 import dev.jorel.commandapi.CommandAPIBukkitConfig;
+import lombok.Getter;
+import lombok.experimental.Accessors;
 import me.glicz.holograms.command.GlitchHologramsCommand;
 import me.glicz.holograms.line.HologramLine;
 import me.glicz.holograms.line.HologramLineImpl;
 import me.glicz.holograms.listener.PlayerJoinQuitListener;
+import me.glicz.holograms.listener.WorldUnloadListener;
 import me.glicz.holograms.loader.HologramLoader;
-import me.glicz.holograms.nms.NMS;
-import me.glicz.holograms.nms.NMSVersionHandler;
+import me.glicz.holograms.nms.NMSBridge;
+import me.glicz.holograms.nms.NMSBridgeImpl;
 import me.glicz.holograms.task.AsyncHologramUpdateTask;
 import org.bukkit.Bukkit;
 import org.bukkit.Location;
@@ -21,27 +24,34 @@ import java.util.*;
 
 public class GlitchHolograms extends JavaPlugin implements GlitchHologramsAPI {
     private final Map<String, Hologram> registeredHolograms = new HashMap<>();
-    private NMS nms;
+    @Getter
+    @Accessors(fluent = true)
+    private NMSBridge nmsBridge;
 
-    public static NMS getNms() {
-        return ((GlitchHolograms) GlitchHologramsAPI.get()).nms;
+    public static GlitchHolograms get() {
+        return (GlitchHolograms) GlitchHologramsAPI.get();
     }
 
     @Override
     public void onLoad() {
-        CommandAPI.onLoad(new CommandAPIBukkitConfig(this).silentLogs(true));
+        CommandAPI.onLoad(new CommandAPIBukkitConfig(this)
+                .silentLogs(true)
+                .useMojangMappings(true)
+                .usePluginNamespace()
+        );
     }
 
     @Override
     public void onEnable() {
         CommandAPI.onEnable();
 
-        this.nms = NMSVersionHandler.getNmsInstance(false);
+        this.nmsBridge = new NMSBridgeImpl();
 
         new GlitchHologramsCommand().register();
 
         Bukkit.getServicesManager().register(GlitchHologramsAPI.class, this, this, ServicePriority.Highest);
         Bukkit.getPluginManager().registerEvents(new PlayerJoinQuitListener(), this);
+        Bukkit.getPluginManager().registerEvents(new WorldUnloadListener(), this);
 
         HologramLoader.loadAll(this);
 
@@ -57,8 +67,10 @@ public class GlitchHolograms extends JavaPlugin implements GlitchHologramsAPI {
 
     @Override
     public @NotNull Hologram createHologram(@NotNull String id, @NotNull Location location, boolean save) {
-        if (registeredHolograms.containsKey(id))
+        if (registeredHolograms.containsKey(id)) {
             throw new IllegalArgumentException("Hologram with id %s already exists!".formatted(id));
+        }
+
         Hologram hologram = new HologramImpl(id, location);
         registeredHolograms.put(id, hologram);
         return hologram;
@@ -67,20 +79,22 @@ public class GlitchHolograms extends JavaPlugin implements GlitchHologramsAPI {
     @Override
     public boolean removeHologram(@NotNull String id) {
         Hologram hologram = registeredHolograms.remove(id);
-        if (hologram == null)
+        if (hologram == null) {
             return false;
-        List.copyOf(hologram.getViewers()).forEach(hologram::hide);
+        }
+
+        List.copyOf(hologram.viewers()).forEach(hologram::hide);
         return true;
     }
 
     @Override
-    public @NotNull Collection<Hologram> getRegisteredHolograms() {
-        return Collections.unmodifiableCollection(registeredHolograms.values());
+    public @NotNull @Unmodifiable List<Hologram> getRegisteredHolograms() {
+        return List.copyOf(registeredHolograms.values());
     }
 
     @Override
-    public @NotNull @Unmodifiable Set<String> getRegisteredHologramsKeys() {
-        return Collections.unmodifiableSet(registeredHolograms.keySet());
+    public @NotNull @Unmodifiable Set<String> getRegisteredHologramKeys() {
+        return Set.copyOf(registeredHolograms.keySet());
     }
 
     @Override
